--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
               <h1>Hi. I'm <strong>Zhixuan</strong>.</h1>
             </header>
             <p>
-              And this is <strong>Miniport</strong>, a free, fully responsive
+              A Full Stack software engineer with backgound in mechanical
+              engineering and construction management.
+              <!-- And this is <strong>Miniport</strong>, a free, fully responsive
               HTML5 site template designed by
               <a href="http://twitter.com/ajlkn">AJ</a> for
               <a href="http://html5up.net">HTML5 UP</a> &amp; released under the
-              <a href="http://html5up.net/license">CCA license</a>.
+              <a href="http://html5up.net/license">CCA license</a>. -->
             </p>
-            <a href="#work" class="button large scrolly"
+            <!-- <a href="#work" class="button large scrolly"
               >Learn about what I do</a
-            >
+            > -->
           </div>
         </div>
       </div>
