modifying project content layout

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
               <h1>Hi. I'm <strong>Zhixuan</strong>.</h1>
             </header>
             <p>
-              A Full Stack software engineer with backgound in mechanical
+              A Full Stack software engineer with background in mechanical
               engineering and construction management.
+            </p>
+            <p>
+              Check out my projects below.
               <!-- And this is <strong>Miniport</strong>, a free, fully responsive
               HTML5 site template designed by
               <a href="http://twitter.com/ajlkn">AJ</a> for
@@ -106,7 +109,7 @@
           <h2>Projects</h2>
         </header>
         <div class="row">
-          <div class="col-4 col-6-medium col-12-small">
+          <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/pic01.jpg" alt=""
@@ -115,7 +118,7 @@
               <p>Ornare nulla proin odio consequat.</p>
             </article>
           </div>
-          <div class="col-4 col-6-medium col-12-small">
+          <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/pic02.jpg" alt=""
@@ -124,7 +127,7 @@
               <p>Ornare nulla proin odio consequat.</p>
             </article>
           </div>
-          <div class="col-4 col-6-medium col-12-small">
+          <!-- <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/pic03.jpg" alt=""
@@ -133,7 +136,7 @@
               <p>Ornare nulla proin odio consequat.</p>
             </article>
           </div>
-          <div class="col-4 col-6-medium col-12-small">
+          <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/pic04.jpg" alt=""
@@ -141,8 +144,8 @@
               <h3><a href="#">Tempus dolore</a></h3>
               <p>Ornare nulla proin odio consequat.</p>
             </article>
-          </div>
-          <div class="col-4 col-6-medium col-12-small">
+          </div> -->
+          <!-- <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/pic05.jpg" alt=""
@@ -151,7 +154,7 @@
               <p>Ornare nulla proin odio consequat.</p>
             </article>
           </div>
-          <div class="col-4 col-6-medium col-12-small">
+          <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
               <a href="#" class="image featured"
                 ><img src="images/pic06.jpg" alt=""
@@ -159,7 +162,7 @@
               <h3><a href="#">Sed amet ornare</a></h3>
               <p>Ornare nulla proin odio consequat.</p>
             </article>
-          </div>
+          </div> -->
         </div>
       </div>
     </article>
@@ -172,6 +175,27 @@
             <h3>Find me on ...</h3>
             <ul class="social">
               <li>
+                <a href="#" class="icon brands fa-dribbble"
+                  ><span class="label">Dribbble</span></a
+                >
+              </li>
+
+              <li>
+                <a href="#" class="icon brands fa-tumblr"
+                  ><span class="label">Tumblr</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-twitter"
+                  ><span class="label">Twitter</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands fa-facebook-f"
+                  ><span class="label">Facebook</span></a
+                >
+              </li>
+              <li>
                 <a
                   href="https://www.linkedin.com/in/zhixuanzhao/"
                   class="icon brands fa-linkedin-in"
@@ -179,7 +203,7 @@
                 >
               </li>
               <li>
-                <a href="zzhao003@gmail.com" class="icon brands fa-google"
+                <a href="zzhao003@gmail.com" class="icon brands fa-google-plus"
                   ><span class="label">Google</span></a
                 >
               </li>
