--- a/index.html
+++ b/index.html
@@ -38,69 +38,11 @@
               A Full Stack software engineer with background in mechanical
               engineering and construction management.
             </p>
-            <p>
-              Check out my projects below.
-              <!-- And this is <strong>Miniport</strong>, a free, fully responsive
-              HTML5 site template designed by
-              <a href="http://twitter.com/ajlkn">AJ</a> for
-              <a href="http://html5up.net">HTML5 UP</a> &amp; released under the
-              <a href="http://html5up.net/license">CCA license</a>. -->
-            </p>
-            <!-- <a href="#work" class="button large scrolly"
-              >Learn about what I do</a
-            > -->
+            <p>Check out my projects below.</p>
           </div>
         </div>
       </div>
     </article>
-
-    <!-- Work -->
-    <!-- <article id="work" class="wrapper style2">
-      <div class="container">
-        <header>
-          <h2>Here's all the stuff I do.</h2>
-          <p>Odio turpis amet sed consequat eget posuere consequat.</p>
-        </header>
-        <div class="row aln-center">
-          <div class="col-4 col-6-medium col-12-small">
-            <section class="box style1">
-              <span class="icon featured fa-comments"></span>
-              <h3>Consequat lorem</h3>
-              <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
-              </p>
-            </section>
-          </div>
-          <div class="col-4 col-6-medium col-12-small">
-            <section class="box style1">
-              <span class="icon solid featured fa-camera-retro"></span>
-              <h3>Lorem dolor tempus</h3>
-              <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
-              </p>
-            </section>
-          </div>
-          <div class="col-4 col-6-medium col-12-small">
-            <section class="box style1">
-              <span class="icon featured fa-thumbs-up"></span>
-              <h3>Feugiat posuere</h3>
-              <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
-              </p>
-            </section>
-          </div>
-        </div>
-        <footer>
-          <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-          <a href="#portfolio" class="button large scrolly"
-            >See some of my recent work</a
-          >
-        </footer>
-      </div>
-    </article> -->
 
     <!-- Portfolio -->
     <article id="projects" class="wrapper style3">
@@ -111,11 +53,40 @@
         <div class="row">
           <div class="col-6 col-6-medium col-12-small">
             <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic01.jpg" alt=""
-              /></a>
-              <h3><a href="#">Magna feugiat</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
+              <div
+                class="image featured"
+                style="position: relative; padding-bottom: 62.5%; height: 0"
+              >
+                <iframe
+                  src="https://www.loom.com/embed/b62b9a17731d430dbe11e8e22985fb7e?sid=bfda15cd-472e-43f1-aaee-b2c4900e30a8"
+                  frameborder="0"
+                  webkitallowfullscreen
+                  mozallowfullscreen
+                  allowfullscreen
+                  style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                  "
+                ></iframe>
+              </div>
+              <h3>
+                <a
+                  href="https://www.loom.com/share/b62b9a17731d430dbe11e8e22985fb7e"
+                  >RoomEZ</a
+                >
+              </h3>
+              <p>
+                RoomEZ is a platform that connects users with potential
+                roommates based on their specified search criteria. It provides
+                a secure and user-friendly environment for users to browse
+                profiles, communicate with one another, and find compatible
+                housemates. The platform aims to create a more harmonious living
+                environment by helping users find someone who shares their
+                interests and lifestyle.
+              </p>
             </article>
           </div>
           <div class="col-6 col-6-medium col-12-small">
@@ -127,42 +98,6 @@
               <p>Ornare nulla proin odio consequat.</p>
             </article>
           </div>
-          <!-- <div class="col-6 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic03.jpg" alt=""
-              /></a>
-              <h3><a href="#">Lorem ipsum</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
-            </article>
-          </div>
-          <div class="col-6 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic04.jpg" alt=""
-              /></a>
-              <h3><a href="#">Tempus dolore</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
-            </article>
-          </div> -->
-          <!-- <div class="col-6 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic05.jpg" alt=""
-              /></a>
-              <h3><a href="#">Feugiat aliquam</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
-            </article>
-          </div>
-          <div class="col-6 col-6-medium col-12-small">
-            <article class="box style2">
-              <a href="#" class="image featured"
-                ><img src="images/pic06.jpg" alt=""
-              /></a>
-              <h3><a href="#">Sed amet ornare</a></h3>
-              <p>Ornare nulla proin odio consequat.</p>
-            </article>
-          </div> -->
         </div>
       </div>
     </article>
@@ -174,27 +109,6 @@
           <div class="col-12">
             <h3>Find me on ...</h3>
             <ul class="social">
-              <li>
-                <a href="#" class="icon brands fa-dribbble"
-                  ><span class="label">Dribbble</span></a
-                >
-              </li>
-
-              <li>
-                <a href="#" class="icon brands fa-tumblr"
-                  ><span class="label">Tumblr</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
               <li>
                 <a
                   href="https://www.linkedin.com/in/zhixuanzhao/"
@@ -214,17 +128,6 @@
                   ><span class="label">Github</span></a
                 >
               </li>
-              <!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
             </ul>
             <hr />
           </div>
