--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                 environment by helping users find someone who shares their
                 interests and lifestyle.
               </p>
+              <hr />
+              <p>
+                <strong>Tech Stack: </strong>React/Redux, Node/Express,
+                Socket.IO, MySQL, Knex.js, Jest, Cloudinary/Multer
+              </p>
             </article>
           </div>
           <div class="col-6 col-6-medium col-12-small">
@@ -134,8 +139,8 @@
         </div>
         <footer>
           <ul id="copyright">
-            <li>&copy; Untitled. All rights reserved.</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; Zhixuan. All rights reserved.</li>
+            <!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
           </ul>
         </footer>
       </div>
